Implement filter for locations
